--- a/index.html
+++ b/index.html
@@ -1,1 +1,45 @@
-pc
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>플랫디자인</title>
+</head>
+<body>
+    <div id="wrap">
+        <header>
+            HEADER
+        </header>
+        <div id="contents">
+            <div id="slider">
+                SLIDER
+            </div>
+            <div id="new-doc">
+                NEW DOC
+            </div>
+            <div id="best-doc">
+                BEST DOC
+            </div>
+            <div id="point-flat">
+                POINT FLAT
+            </div>
+            <div id="best-key">
+                BEST-KEY
+            </div>
+            <div id="w3c">
+                W3C
+            </div>
+            <div id="web-std">
+                WEB-STD
+            </div>
+            <div id="sns">
+                SNS
+            </div>
+        </div>
+        <footer>
+            FOOTER
+        </footer>
+    </div>
+</body>
+</html>
