--- a/index.html
+++ b/index.html
@@ -27,11 +27,8 @@
             <div id="best-key">
                 BEST-KEY
             </div>
-            <div id="w3c">
-                W3C
-            </div>
-            <div id="web-std">
-                WEB-STD
+            <div id="w3c-web-std">
+                W3C-web-std
             </div>
             <div id="sns">
                 SNS
